[gd_scene load_steps=3 format=2]

[ext_resource path="res://Actors/MobileClaw/AssemblyPlatform.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 1 )

[node name="AssemblyPlatform" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_AssemblyPlatform_area_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_Timer_timeout"]
